--- a/presentation.html
+++ b/presentation.html
@@ -185,7 +185,11 @@ Laura Zang
 <section id="data-overview" class="slide level2">
 <h2>Data Overview</h2>
 <p>We analyze three core indicators:<br>
-- GDP per Capita (US$) - Life Expectancy (years) - Healthcare Expenditure (% of GDP)</p>
+- GDP per Capita (US$)</p>
+<ul>
+<li class="fragment"><p>Life Expectancy (years)</p></li>
+<li class="fragment"><p>Healthcare Expenditure (% of GDP)</p></li>
+</ul>
 <div class="cell" data-execution_count="2">
 <div id="tbl-summary-stats" class="cell quarto-float quarto-figure quarto-figure-center" data-execution_count="2">
 <figure class="quarto-float quarto-float-tbl">
@@ -193,7 +197,7 @@ Laura Zang
 Table&nbsp;1
 </figcaption>
 <div aria-describedby="tbl-summary-stats-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="30">
+<div class="cell-output cell-output-display" data-execution_count="37">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -289,7 +293,7 @@ Table&nbsp;1
 Table&nbsp;2
 </figcaption>
 <div aria-describedby="tbl-correlations-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="31">
+<div class="cell-output cell-output-display" data-execution_count="38">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -353,7 +357,7 @@ Table&nbsp;2
 <li class="fragment"><p>The distributions along the diagonal highlight that income is highly skewed, whereas life expectancy and health spending are more evenly distributed across countries.</p></li>
 </ul>
 </div><div class="column" style="width:60%;">
-<div id="cell-fig-pairwise" class="cell" data-fig-height="3" data-fig-width="3" data-execution_count="4">
+<div id="cell-fig-pairwise" class="cell" data-fig-height="2.5" data-fig-width="2.5" data-execution_count="4">
 <div class="cell-output cell-output-display">
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
 <figure class="quarto-float quarto-float-fig">
@@ -441,37 +445,37 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 Table&nbsp;3: Comparison of the United States with global and high-income averages. Source: World Bank WDI (2023).
 </figcaption>
 <div aria-describedby="tbl-usa-comparison-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="35">
+<div class="cell-output cell-output-display" data-execution_count="42">
 <style type="text/css">
 </style>
 
-<table id="T_60231" class="do-not-create-environment cell caption-top">
+<table id="T_23152" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_60231_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_60231_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_60231_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_60231_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_23152_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_23152_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_23152_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_23152_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_60231_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_60231_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_60231_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_60231_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_23152_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_23152_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_23152_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_23152_row0_col3" class="data row0 col3">21,076.94</td>
 </tr>
 <tr class="even">
-<td id="T_60231_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_60231_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_60231_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_60231_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_23152_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_23152_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_23152_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_23152_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_60231_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_60231_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_60231_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_60231_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_23152_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_23152_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_23152_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_23152_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
