--- a/presentation.html
+++ b/presentation.html
@@ -50,7 +50,7 @@
     div.csl-indent {
       margin-left: 2em;
     }  </style>
-  <link rel="stylesheet" href="presentation_files/libs/revealjs/dist/theme/quarto-b12ffb7d91971ae7edde0f4a72e8670f.css">
+  <link rel="stylesheet" href="presentation_files/libs/revealjs/dist/theme/quarto-e40b09fbe7a3490437d6e4b8295436cf.css">
   <link href="presentation_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="presentation_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
   <link href="presentation_files/libs/revealjs/plugin/reveal-menu/quarto-menu.css" rel="stylesheet">
@@ -178,9 +178,9 @@ Laura Zang
 </section>
 <section id="data-overview" class="slide level2">
 <h2>Data Overview</h2>
-<p>We analyze three core indicators:<br>
-- GDP per Capita (US$)</p>
+<p>We analyze three core indicators:</p>
 <ul>
+<li class="fragment"><p>GDP per Capita (US$)</p></li>
 <li class="fragment"><p>Life Expectancy (years)</p></li>
 <li class="fragment"><p>Healthcare Expenditure (% of GDP)</p></li>
 </ul>
@@ -191,7 +191,7 @@ Laura Zang
 Table&nbsp;1
 </figcaption>
 <div aria-describedby="tbl-summary-stats-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="16">
+<div class="cell-output cell-output-display" data-execution_count="2">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -219,19 +219,19 @@ Table&nbsp;1
 <tbody>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">count</th>
-<td>209.000000</td>
+<td>208.000000</td>
 <td>217.000000</td>
 <td>191.000000</td>
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">mean</th>
-<td>21076.940879</td>
+<td>21175.312219</td>
 <td>73.108020</td>
 <td>6.883157</td>
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">std</th>
-<td>30993.910263</td>
+<td>31035.961639</td>
 <td>7.942539</td>
 <td>3.284450</td>
 </tr>
@@ -243,19 +243,19 @@ Table&nbsp;1
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">25%</th>
-<td>2620.838043</td>
+<td>2692.573957</td>
 <td>67.788000</td>
 <td>4.374079</td>
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">50%</th>
-<td>7655.594210</td>
+<td>7713.094217</td>
 <td>74.160976</td>
 <td>6.500235</td>
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">75%</th>
-<td>28451.147783</td>
+<td>28905.928012</td>
 <td>78.531000</td>
 <td>8.825374</td>
 </tr>
@@ -287,7 +287,7 @@ Table&nbsp;1
 Table&nbsp;2
 </figcaption>
 <div aria-describedby="tbl-correlations-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="17">
+<div class="cell-output cell-output-display" data-execution_count="3">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -316,18 +316,18 @@ Table&nbsp;2
 <tr class="odd">
 <th data-quarto-table-cell-role="th">gdp_per_capita</th>
 <td>1.000000</td>
-<td>0.572225</td>
-<td>0.145007</td>
+<td>0.571343</td>
+<td>0.144464</td>
 </tr>
 <tr class="even">
 <th data-quarto-table-cell-role="th">life_expectancy</th>
-<td>0.572225</td>
+<td>0.571343</td>
 <td>1.000000</td>
 <td>0.157597</td>
 </tr>
 <tr class="odd">
 <th data-quarto-table-cell-role="th">health_expenditure_gdp_share</th>
-<td>0.145007</td>
+<td>0.144464</td>
 <td>0.157597</td>
 <td>1.000000</td>
 </tr>
@@ -356,7 +356,7 @@ Table&nbsp;2
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
 <figure class="quarto-float quarto-float-fig">
 <div aria-describedby="fig-pairwise-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img data-src="presentation_files/figure-revealjs/fig-pairwise-output-1.png" width="567" height="567">
+<img data-src="presentation_files/figure-revealjs/fig-pairwise-output-1.png" width="570" height="570">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-pairwise-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and health expenditure (% of GDP).
@@ -439,37 +439,37 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 Table&nbsp;3: Comparison of the United States with global and high-income averages. Source: World Bank WDI (2023).
 </figcaption>
 <div aria-describedby="tbl-usa-comparison-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="21">
+<div class="cell-output cell-output-display" data-execution_count="7">
 <style type="text/css">
 </style>
 
-<table id="T_14bf9" class="do-not-create-environment cell caption-top">
+<table id="T_f4fd6" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_14bf9_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_14bf9_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_14bf9_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_14bf9_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_f4fd6_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_f4fd6_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_f4fd6_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_f4fd6_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_14bf9_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_14bf9_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_14bf9_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_14bf9_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_f4fd6_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_f4fd6_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_f4fd6_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_f4fd6_row0_col3" class="data row0 col3">21,175.31</td>
 </tr>
 <tr class="even">
-<td id="T_14bf9_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_14bf9_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_14bf9_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_14bf9_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_f4fd6_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_f4fd6_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_f4fd6_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_f4fd6_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_14bf9_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_14bf9_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_14bf9_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_14bf9_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_f4fd6_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_f4fd6_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_f4fd6_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_f4fd6_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
