--- a/presentation.html
+++ b/presentation.html
@@ -50,7 +50,7 @@
     div.csl-indent {
       margin-left: 2em;
     }  </style>
-  <link rel="stylesheet" href="presentation_files/libs/revealjs/dist/theme/quarto-e40b09fbe7a3490437d6e4b8295436cf.css">
+  <link rel="stylesheet" href="presentation_files/libs/revealjs/dist/theme/quarto-8d5bab8fd2aff32ca58c1acc26645c19.css">
   <link href="presentation_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="presentation_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
   <link href="presentation_files/libs/revealjs/plugin/reveal-menu/quarto-menu.css" rel="stylesheet">
@@ -191,7 +191,7 @@ Laura Zang
 Table&nbsp;1
 </figcaption>
 <div aria-describedby="tbl-summary-stats-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="2">
+<div class="cell-output cell-output-display" data-execution_count="9">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -287,7 +287,7 @@ Table&nbsp;1
 Table&nbsp;2
 </figcaption>
 <div aria-describedby="tbl-correlations-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="3">
+<div class="cell-output cell-output-display" data-execution_count="10">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -356,7 +356,7 @@ Table&nbsp;2
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
 <figure class="quarto-float quarto-float-fig">
 <div aria-describedby="fig-pairwise-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img data-src="presentation_files/figure-revealjs/fig-pairwise-output-1.png" width="570" height="570">
+<img data-src="presentation_files/figure-revealjs/fig-pairwise-output-1.png" width="567" height="567">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-pairwise-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and health expenditure (% of GDP).
@@ -439,37 +439,37 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 Table&nbsp;3: Comparison of the United States with global and high-income averages. Source: World Bank WDI (2023).
 </figcaption>
 <div aria-describedby="tbl-usa-comparison-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="7">
+<div class="cell-output cell-output-display" data-execution_count="14">
 <style type="text/css">
 </style>
 
-<table id="T_f4fd6" class="do-not-create-environment cell caption-top">
+<table id="T_a7c3f" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_f4fd6_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_f4fd6_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_f4fd6_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_f4fd6_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_a7c3f_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_a7c3f_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_a7c3f_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_a7c3f_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_f4fd6_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_f4fd6_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_f4fd6_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_f4fd6_row0_col3" class="data row0 col3">21,175.31</td>
+<td id="T_a7c3f_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_a7c3f_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_a7c3f_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_a7c3f_row0_col3" class="data row0 col3">21,175.31</td>
 </tr>
 <tr class="even">
-<td id="T_f4fd6_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_f4fd6_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_f4fd6_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_f4fd6_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_a7c3f_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_a7c3f_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_a7c3f_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_a7c3f_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_f4fd6_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_f4fd6_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_f4fd6_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_f4fd6_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_a7c3f_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_a7c3f_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_a7c3f_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_a7c3f_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
